# MAI-OOP-Lab6-2025

./: .gitignore  README.md
lab-6/: CMakeLists.txt  main.cpp
lab-6/include/: Battle.h  Factory.h  Observer.h  Visitor.h  npc.h
lab-6/src/: Battle.cpp  Factory.cpp  Observer.cpp  Visitor.cpp  global.cpp  npc.cpp
lab-6/test/: test06.cpp
